--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.5",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-form": "^8.3.6",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
+    "toastify": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
